--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://sql.freedb.tech:3306/freedb_nimit_db
-spring.datasource.username=freedb_nimit
-spring.datasource.password=q!94?2M5d!%233p
+spring.datasource.url=jdbc:mysql://localhost:3306/nimit
+spring.datasource.username=root
+spring.datasource.password=Simform@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.show-sql=true
